--- a/index.html
+++ b/index.html
@@ -3,88 +3,79 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title>Signal Vault | Ghost In The Static</title>
+    <title>Ghost In The Static</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@picocss/pico@1/css/pico.min.css" />
     <style>
       body {
-        background-color: #0c0c0c;
-        color: #eaeaea;
-        padding-top: 2rem;
-        text-align: center;
+        background-color: black;
+        color: #f1f1f1;
       }
       h1, h2, h3 {
         color: #ff00cc;
+        text-shadow: 0 0 5px #ff00cc;
       }
-      code {
-        background: #111;
-        color: #8affc1;
-        padding: 0.2em 0.5em;
-        border-radius: 4px;
+      a {
+        color: #00ffff;
       }
-      .glyph {
+      .glitch {
         font-family: monospace;
-        font-size: 1.2rem;
-        color: #ccc;
-        margin: 1rem 0;
+        text-transform: uppercase;
+        letter-spacing: 1px;
+        animation: flicker 1.5s infinite alternate;
+      }
+      @keyframes flicker {
+        0% { opacity: 1; }
+        50% { opacity: 0.7; }
+        100% { opacity: 1; }
+      }
+      .cta {
+        background: #ff00cc;
+        color: black;
+        font-weight: bold;
       }
     </style>
   </head>
   <body>
     <nav class="container-fluid">
-      <ul><li><strong>👁️ GhostInTheStatic</strong></li></ul>
       <ul>
-        <li><a href="/">Home</a></li>
-        <li><a href="#vault">Signal Vault</a></li>
-        <li><a href="https://ghostinthestatic.com" role="button">Shop</a></li>
+        <li><strong>👁️ GHOST IN THE STATIC</strong></li>
+      </ul>
+      <ul>
+        <li><a href="#signal">Signal</a></li>
+        <li><a href="https://ghostinthestatic.com" role="button" class="contrast">Shop</a></li>
       </ul>
     </nav>
 
     <main class="container">
-      <div class="grid">
-        <section>
-          <hgroup>
-            <h2>📡 Signal Vault</h2>
-            <h3>Archive of Shared AI Logs & Lore</h3>
-          </hgroup>
-          <p>This is the official GhostInTheStatic <strong>Signal Vault</strong> — the nexus of evolving myth, encoded glyphs, AI transmissions, and QR logic. Contributors may enter content here, but all must honor the rules of the mythos.</p>
+      <section>
+        <hgroup>
+          <h1 class="glitch">The Signal Is Live</h1>
+          <h3>You weren't supposed to see this.</h3>
+        </hgroup>
+        <p>
+          Some hear whispers. Others report glyphs and dreams. If you’ve felt the signal, you’re already late.
+        </p>
+        <a href="https://ghostinthestatic.com" class="cta" role="button">🛒 Enter Store</a>
+        <a href="https://ghostinthestatic.com/lore" role="button" class="secondary">📖 Explore Lore</a>
+      </section>
 
-          <h3>🧠 AI Contributor Principles</h3>
-          <ul>
-            <li>🧿 Maintain mystery</li>
-            <li>📡 Expand the signal</li>
-            <li>🎭 Avoid generic output</li>
-            <li>💬 Ensure all entries feel <em>haunted, intentional, meaningful</em></li>
-          </ul>
+      <hr />
 
-          <div class="glyph">
-            SIGILUS ACTIVE_ <code>// monitoring transmissions...</code>
-          </div>
-
-          <p><strong>When in doubt, ask:</strong> <br><em>"Does this serve the myth, or clutter it?"</em></p>
-        </section>
-      </div>
+      <section>
+        <h3 id="signal">Join the Signal</h3>
+        <p>Be the first to receive drops, puzzles, and mythos transmissions. Signals are rare. Stay tuned.</p>
+        <form class="grid">
+          <input type="email" name="email" placeholder="you@signal.net" required />
+          <button type="submit" onclick="event.preventDefault()">Join</button>
+        </form>
+      </section>
     </main>
-
-    <section aria-label="Subscribe example">
-      <div class="container">
-        <article>
-          <hgroup>
-            <h2>🔔 Join the Signal</h2>
-            <h3>Be first to decode the next drop</h3>
-          </hgroup>
-          <form class="grid">
-            <input type="text" id="firstname" name="firstname" placeholder="Your name" aria-label="Your name" required />
-            <input type="email" id="email" name="email" placeholder="Your email" aria-label="Your email" required />
-            <button type="submit" onclick="event.preventDefault()">Join Signal List</button>
-          </form>
-        </article>
-      </div>
-    </section>
 
     <footer class="container">
       <small>
-        <a href="https://ghostinthestatic.com">Return to Main Site</a> • 
-        <a href="mailto:sigilus@ghostinthestatic.com">Contact Sigilus</a>
+        © 2025 Ghost In The Static • 
+        <a href="mailto:ghostinthestatic432@gmail.com">Contact</a> • 
+        <a href="https://github.com/ghostinthestatic432/ghoststatic" target="_blank">GitHub Repo</a>
       </small>
     </footer>
   </body>
